--- a/src/layouts/_nav.scss
+++ b/src/layouts/_nav.scss
@@ -128,7 +128,7 @@ $menuColor: rgb(252, 251, 247);
     height: 44px;
 
     + div {
-      padding-top: 50px;
+      padding-top: 10px;
     }
   }
 
